--- a/less/plugin-ecommerce.less
+++ b/less/plugin-ecommerce.less
@@ -25,6 +25,9 @@
     margin: 12px 0 30px;
     float: left;
     width: 100%;
+    @media @tablet {
+        margin: 0;
+    }
 }
 
 // Product list container
